# pbr

./: .gitignore  CMakeLists.txt  _clang-format  b.bat  dist_test.cpp  imgui.ini  imgui_impl_glfw.cpp  mesh_loader.cpp  mesh_loader.hpp  pathtrace_main.cpp  pbr.cpp  pbr.hpp  pbr_math.cpp  pbr_math.hpp  precompiled.hpp  raytrace_main.cpp  scene.cpp  scene.hpp
gfx/: crystals_flat.boba
